@@ -4,6 +4,7 @@
     * Add dbus daemon version. Check dbus daemon status by reading version.
     * Provide a dialog to restart daemon.
     * Improve code. Express all of Mint, YLMF, Deepin as UBUNTU_DERIV.
+    * Improve code. Do not import lib twice.
 
 2010-06-02 Homer Xing <homer.xing@gmail.com>
 
